--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Assignment-2.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/MaheshwariV-rguktiiit/Assignment-2/blob/master/Assignment_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -417,7 +428,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "cb6f6778-5fef-4155-daf3-b59d4000311f"
+        "outputId": "70a311fd-3bed-4172-9f9c-94dc28bedd34"
       },
       "source": [
         "def map_to_lengths_for(words):\n",
@@ -433,15 +444,15 @@
         "    words = ['ab', 'cde', 'erty']\n",
         "    words1=[\"knn\",\"kmean\",\"svm\"]\n",
         "    print(\"List passed is\",words ,\"=>\" , map_to_lengths_for(words))\n",
-        "    print(\"List passed is\",words ,\"=>\" ,map_to_lengths_lists(words1))"
+        "    print(\"List passed is\",words1 ,\"=>\" ,map_to_lengths_lists(words1))"
       ],
-      "execution_count": 92,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "List passed is ['ab', 'cde', 'erty'] => [2, 3, 4]\n",
-            "List passed is ['ab', 'cde', 'erty'] => [3, 5, 3]\n"
+            "List passed is ['knn', 'kmean', 'svm'] => [3, 5, 3]\n"
           ],
           "name": "stdout"
         }
